-issue#1268: Regex filters will now correctly filter
-issue#1274: Host CPU script checks value prescence to prevent unnecessary errors
-issue#1275: Fix issues with authPriv not supplying username/password
-issue#1289: Change Script Server to output parameters as returned by parseArgs()
-issue: When a checkbox table has no rows, the checkbox is resizable

1.1.33
-issue#1253: Automatically generated RRDtool DEF names in Cacti 1.1.32 break existing Graph Templates

1.1.32
-issue#969: Undefined index: color_id / task_item when viewing graphs
-issue#1166: Fix typo of 'locale' in global_languages.php
-issue#1222: Graphs with large number of items causes RRDTool to error
-issue#1230: PHP Fatal error: Call to undefined function get_max_tree_sequence()
-issue#1238: SNMP functions fail to handle "Invalid object identifier" error
-issue#1239: Browser console error in layout.js
-issue#1240: Page layout issues caused by library update
-issue#1246: Make SNMP Error return more info
-issue: Missing or corrupted theme files can corrupt user settings
-issue: Theme may not change until next login
-issue: Tree edit Tree/Device/Graph drag areas incorrect
-issue: Make callback error handling compatible with jQuery 3.x
-issue: Ensure the snmp_error is cleared before every call
-issue: Indicate unknown error when RRDTool returns no error message
-feature: Update Javascript library: js.storage.js, d3.js, jquery.js, jquery.tablednd.js, jquery.timepicker.js

1.1.31
-issue#629: Site reload after delete the last letter in the searchbar
-issue#1022: Discovery network stuck in "running" state does not return results
-issue#1164: Version compare function fails on major/minor only versions
-issue#1166: Invalid New User default language selection
-issue#1175: Automatic logout inconsistent redirect
-issue#1179: Warn during installation if installing moving to older version
-issue#1183: Automatically detect missing Theme and use alternate